# erizo_cpp

./: .gitignore  3rd.cmake  CMakeLists.txt  autobuild.sh  nodes.conf  test.js
cmake/: nrappkit.cmake  webrtc.cmake
erizo_cpp/: CMakeLists.txt  main.cpp
erizo_cpp/common/: config.cpp  config.h  utils.h
erizo_cpp/core/: erizo.cpp  erizo.h
erizo_cpp/http/: http_simple_client.cpp  http_simple_client.h
erizo_cpp/model/: bridge_conn.cpp  bridge_conn.h  bridge_stream.h  client.h  connection.cpp  connection.h  erizo_record_agent.h  mixer.h
erizo_cpp/mysql/: sql_helper.cpp  sql_helper.h
erizo_cpp/rabbitmq/: amqp_helper.cpp  amqp_helper.h
erizo_lib/: BridgeIO.cpp  BridgeIO.h  BridgeMediaStream.cpp  BridgeMediaStream.h  CMakeLists.txt  DtlsTransport.cpp  IceConnection.cpp  IceConnection.h  LibNiceConnection.cpp  LibNiceConnection.h  MediaDefinitions.h  MediaStream.cpp  MediaStream.h  OneToManyProcessor.cpp  OneToManyProcessor.h  SdpInfo.cpp  SdpInfo.h  Transport.h  WebRtcConnection.cpp  WebRtcConnection.h  back.txt
erizo_lib/bandwidth/: MaxVideoBWDistributor.cpp  TargetVideoBWDistributor.cpp
erizo_lib/common/: utils.h
erizo_lib/dtls/: DtlsClient.cpp  DtlsSocket.cpp  DtlsSocket.h  bf_dwrap.c  bf_dwrap.h
erizo_lib/lib/: ClockUtils.h
erizo_lib/media/: ExternalOutput.cpp  ExternalOutput.h  MediaProcessor.cpp  MediaProcessor.h  OneToManyTranscoder.cpp  OneToManyTranscoder.h  SyntheticInput.cpp  SyntheticInput.h
erizo_lib/media/codecs/: AudioCodec.cpp  AudioCodec.h  VideoCodec.cpp  VideoCodec.h
erizo_lib/media/mixers/: StreamMixer.cpp  StreamMixer.h  VideoMixer.cpp  VideoMixer.h  video_render.cpp  video_render.h
erizo_lib/media/recorder/: file_recorder.cpp  file_recorder.h  flv_recorder.cpp  flv_recorder.h  hls_recorder.cpp  hls_recorder.h  mp4_recorder.cpp  mp4_recorder.h
erizo_lib/pipeline/: Handler.h  HandlerContext-inl.h  HandlerManager.h  Pipeline-inl.h  Pipeline.cpp  Pipeline.h  ServiceContext-inl.h
erizo_lib/rtp/: BandwidthEstimationHandler.cpp  BandwidthEstimationHandler.h  BridgeRtpRetransmissionHandler.cpp  BridgeRtpRetransmissionHandler.h  FecReceiverHandler.cpp  FecReceiverHandler.h  PacketSequencer.cpp.1  PliPacerHandler.cpp  RtcpAggregator.cpp  RtcpAggregator.h  RtcpForwarder.cpp  RtcpForwarder.h  RtcpProcessor.h  RtcpRrGenerator.h  RtpPaddingGeneratorHandler.cpp  RtpPaddingRemovalHandler.cpp  RtpPaddingRemovalHandler.h  RtpRetransmissionHandler.cpp  RtpSink.cpp  RtpSink.h  RtpSource.cpp  RtpSource.h  RtpUtils.cpp  RtpUtils.h  SenderBandwidthEstimantionHandler.cpp  SenderBandwidthEstimationHandler.h
erizo_lib/thread/: IOWorker.cpp  IOWorker.h
misc/ffmpeg_patch/: common.patch
misc/log4cxx_patch/: log4cxx_Makefile.am.patch  log4cxx_console.cpp.patch  log4cxx_inputstreamreader.cpp.patch  log4cxx_private_Makefile.am.patch  log4cxx_socketoutputstream.cpp.patch
nrappkit/src/plugin/api/: api_force.c
nrappkit/src/registry/: registry.c  registry_local.c
nrappkit/src/share/: nr_reg_keys.h
nrappkit/src/util/: ssl_util.c  ssl_util.h  util.h
webrtc/: CMakeLists.txt
webrtc.origin/: CMakeLists.txt
webrtc/webrtc/: common_types.cc  common_types.h  config.h  logging_mac.cc  typedefs.h  video_frame.h
webrtc/webrtc/base/: array_view.h  arraysize.h  atomicops.h  basictypes.h  bitbuffer.cc  bitbuffer.h  buffer.h  bytebuffer.cc  bytebuffer.h  byteorder.h  callback.h  checks.cc  checks.h  common.cc  common.h  constructormagic.h  copyonwritebuffer.cc  copyonwritebuffer.h  criticalsection.cc  criticalsection.h  deprecation.h  event.cc  event.h  event_tracer.cc  event_tracer.h  ignore_wundef.h  logging.cc  logging.h  onetimeevent.h  optional.cc  optional.h  platform_thread.cc  platform_thread.h  platform_thread_types.h  random.h  rate_limiter.cc  rate_limiter.h  rate_statistics.cc  rate_statistics.h  refcount.h  (+20 more)
webrtc/webrtc/base/analytics/: exp_filter.cc  exp_filter.h  percentile_filter.h
webrtc/webrtc/common_video/: rotation.h
webrtc/webrtc/common_video/h264/: h264_common.cc  h264_common.h  pps_parser.cc  pps_parser.h  sps_parser.cc  sps_parser.h  sps_vui_rewriter.cc  sps_vui_rewriter.h
webrtc/webrtc/common_video/include/: video_frame_buffer.h
webrtc/webrtc/modules/bitrate_controller/: send_side_bandwidth_estimation.cc  send_side_bandwidth_estimation.h
webrtc/webrtc/modules/bitrate_controller/include/: bitrate_controller.h
webrtc/webrtc/modules/include/: module.h  module_common_types.h
webrtc/webrtc/modules/pacing/: alr_detector.cc  alr_detector.h  bitrate_prober.cc  bitrate_prober.h  paced_sender.cc  paced_sender.h  packet_router.h
webrtc/webrtc/modules/remote_bitrate_estimator/: aimd_rate_control.cc  aimd_rate_control.h  bwe_defines.cc  inter_arrival.cc  inter_arrival.h  overuse_detector.cc  overuse_detector.h  overuse_estimator.cc  overuse_estimator.h  remote_bitrate_estimator_abs_send_time.cc  remote_bitrate_estimator_abs_send_time.h  remote_bitrate_estimator_single_stream.cc  remote_bitrate_estimator_single_stream.h  remote_estimator_proxy.cc  remote_estimator_proxy.h  send_time_history.cc
webrtc/webrtc/modules/remote_bitrate_estimator/include/: bwe_defines.h  remote_bitrate_estimator.h  send_time_history.h
webrtc/webrtc/modules/remote_bitrate_estimator/test/: bwe_test_logging.cc  bwe_test_logging.h
webrtc/webrtc/modules/rtp_rtcp/include/: flexfec_sender.h  receive_statistics.h  rtp_cvo.h  rtp_payload_registry.h  rtp_rtcp.h  rtp_rtcp_defines.h  ulpfec_receiver.h
webrtc/webrtc/modules/rtp_rtcp/source/: byte_io.h  flexfec_header_reader_writer.cc  flexfec_header_reader_writer.h  forward_error_correction.cc  forward_error_correction.h  (+39 more)
webrtc/webrtc/system_wrappers/include/: aligned_malloc.h  clock.h  critical_section_wrapper.h  event_wrapper.h  field_trial.h  field_trial_default.h  file_wrapper.h  logging.h  metrics.h  metrics_default.h  ntp_time.h  rw_lock_wrapper.h  static_instance.h  trace.h
webrtc/webrtc/system_wrappers/source/: clock.cc  field_trial_default.cc  file_impl.cc  logging.cc  metrics_default.cc  rw_lock.cc  rw_lock_posix.cc  rw_lock_posix.h  trace_impl.cc  trace_impl.h  trace_posix.cc  trace_posix.h
(+8 files in other folders)
